--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(201, 104, 104);
+    background-color: rgb(241, 186, 186);
 }
 
 h1 {
@@ -26,11 +26,18 @@ h1 {
 }
 
 .caixa{
-    background-color: rgb(253, 136, 127);
+    background-color: rgb(250, 203, 200);
     padding: 10px;
     margin: 10px;
     width: 1200px;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+#rodape {
+  color: rgb(0, 0, 0);
+  background-color:  rgb(241, 186, 186);
+  padding: 10px;
+  text-align: center;
 }
